solved overflow issue

--- a/wp-content/themes/apps/assets/css/apps-custom.css
+++ b/wp-content/themes/apps/assets/css/apps-custom.css
@@ -704,3 +704,9 @@ section.pricing .pricing-wrapper {
         left: 0;
     }
 }
+.mobileMenu .mobileMenu-wrapper {
+    visibility: hidden;
+}
+.mobileMenu .mobileMenu-action {
+    visibility: visible;
+}
